# Nexus

./: Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: check-version-bump.yml  compile-and-test.yml  publish-dockerhub.yml  publish-github.yml
src/: controller.rs  lib.rs  log.rs  main.rs
src/controller/: modules.rs  root.rs
src/model/: module.rs
src/service/: registry.rs
