[package]
name = "nexus"
version = "0.0.5"
edition = "2021"

[dependencies]
clap = "4.5.19"
fern = { version = "0.6.2", features = ["colored"] }
humantime = "2.1.0"
log = { version = "0.4.22", features = ["serde"] }
reqwest = "0.12.5"
rocket = { version = "0.5.1", features = ["json"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.63"
tokio = { version = "1.38.1", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "serde"] }
